# LedController

./: .gitignore  README.md
Firmware/: .gitignore  CMakeCache.txt  CMakeLists.txt  partitions-no-ota_C3.csv  partitions-ota_C3.csv  sdkconfig.old
Firmware/main/: CMakeLists.txt  common.cpp  common.h  config.h  config_c3.h  controller_base.h  idf_component.yml  interface.h  main.cpp
Firmware/main/controller/LedController/: LedController.cpp  LedController.h  LedController_cfg.cpp
Firmware/main/controller/base/: controller_base.h  heat_ctrl_base.h
Firmware/main/controller/networker/: netota.cpp  netota.h  network.cpp  network.h  networker.cpp  networker.h  networker_cfg.cpp  networker_data.h  sh_mqtt.c  sh_mqtt.h  snail_activate.cpp  sntp.c  sntp.h  web_server.cpp  web_server.h
Firmware/main/page/: web_page back.html  web_page v132.html  web_page.html
Firmware/main/sh_driver/: buzzer.cpp  buzzer.h  flash_fs.cpp  flash_fs.h  interior_ntc.cpp  interior_ntc.h  knobs.cpp  knobs.h
Firmware/main/sh_hal/: esp_hal.cpp  esp_hal_adc.cpp  hal.h  hal_esp.h
